# model

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: model-config.cmake.in
include/model/: chat.hpp  client.hpp  config.hpp  history.hpp  response.hpp  session.hpp  tools.hpp
ports/model/: portfile.cmake  vcpkg.json
samples/: CMakeLists.txt  basic_chat.cpp  multi_turn.cpp  session.cpp  streaming.cpp  tools.cpp
src/: chat.cpp  client.cpp  history.cpp  session.cpp
src/providers/: anthropic.cpp  anthropic.hpp  google.cpp  google.hpp  openai.cpp  openai.hpp  provider.hpp
versions/: baseline.json
versions/m-/: model.json
